<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MT Player</string>
    <!-- Dialogs / Buttons -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="on_close_activity">Stop playback?</string>
    <string name="queue_songs_clear">Clear queue?</string>
    <string name="favorites_clear">Clear all favorites?</string>
    <string name="favorite_remove">Delete %1s (%2s) from favorites?</string>
    <!-- Main - Fragments titles -->
    <string name="songs">Songs</string>
    <string name="folders">Folders</string>
    <!-- Equalizer -->
    <string name="equalizer">Equalizer</string>
    <string name="equalizer_presets">Presets</string>
    <string name="equalizer_bb">Bass boost</string>
    <string name="equalizer_v">Surround sound</string>
    <!-- Main - Artists/Folder RecyclerViews items  -->
    <string name="artist_info">%1d Albums, %2d Songs</string>
    <string name="folder_info">%1d Songs</string>
    <!-- Popup/Menu titles -->
    <string name="sorting_pref">Sorting</string>
    <string name="sorting_pref_default">Default</string>
    <string name="sorting_pref_track">By track no. ↓</string>
    <string name="sorting_pref_track_inv">By track no. ↑</string>
    <string name="sorting_pref_date_added">Added last</string>
    <string name="sorting_pref_date_added_inv">Added first</string>
    <string name="sorting_pref_artist">By artist A-Z</string>
    <string name="sorting_pref_artist_inv">By artist Z-A</string>
    <string name="sorting_pref_album">By album A-Z</string>
    <string name="sorting_pref_album_inv">By album Z-A</string>
    <string name="shuffle_am">Shuffle all songs</string>
    <string name="shuffle_sa">Shuffle selected album</string>
    <string name="queue_add">Enqueue</string>
    <string name="favorite_add">Favorite</string>
    <string name="filters_clear">Filters will be cleared. Continue?</string>
    <string name="filters_error">Error! Unable to open hidden artists/folders/albums!</string>
    <!-- Queue -->
    <string name="queue">Queue</string>
    <string name="queue_song_add">%1s enqueued!</string>
    <string name="queue_song_remove">Remove %1s from queue?</string>
    <!-- Favorites -->
    <string name="favorites">Favorites</string>
    <string name="favorite_added">%1s (%2s) favorited</string>
    <!-- Playback speed -->
    <string name="content_playback_speed">Playback speed</string>
    <string name="speed_3">Normal</string>
    <!-- Sleep timer-->
    <string name="sleeptimer">Sleep Timer</string>
    <string name="sleeptimer_enabled">Stop playback %1s after</string>
    <string name="sleeptimer_stop">Stop</string>
    <string name="sleeptimer_cancel_desc">Stop sleep timer</string>
    <!-- other content descriptions -->
    <string name="content_skip_prev">Skip to previous</string>
    <string name="content_play">Play/pause</string>
    <string name="content_skip_next">Skip to next</string>
    <string name="content_repeat">Turn on/off selected repetition</string>
    <!-- Messages - Errors -->
    <string name="open_details_fragment">Open artist/folder\'s details</string>
    <string name="error_no_favorites">Add some favorites first.</string>
    <string name="error_no_music">Add some music first.</string>
    <string name="error_not_ready">Could not load the music library! :( Unmounting the SD card rebuilds the Android MediaStore database. Try again later.</string>
    <string name="error_unknown_unsupported">Something went wrong! :( Perhaps the format is unsupported, or the folder is inaccessible (not the app\'s fault!).</string>
    <string name="error_bad_id">Play a song first.</string>
    <string name="error_no_queue">No songs in queue.</string>
    <string name="error_list_ended">List ended.</string>
    <string name="error_builtin_eq">An error occurred! Use the system equalizer (if it exists)!</string>
    <string name="error_sys_eq">System equalizer not available!</string>
    <string name="error_fs_not_allowed_sum">Error! Turn off battery optimization for MT Player</string>
    <string name="error_fs_not_allowed">Something went wrong! :( Consider turning off battery optimization in the system settings: Apps &gt; All apps &gt; Music Player &gt; Battery &gt; Unrestricted, as it could cause the media player service to stop.</string>
    <!-- Messages - Permission rationale -->
    <string name="perm_rationale">Grant MT Player access to your files to play music.</string>
    <!-- Messages - Repeat -->
    <string name="repeat_enabled">Single repetition on.</string>
    <string name="repeat_loop_enabled">∞ repeat on.</string>
    <string name="repeat_disabled">∞ repeat off.</string>
    <!-- Preferences - Categories -->
    <string name="settings">Settings</string>
    <string name="category_general">General</string>
    <!-- Preferences - App Details -->
    <string name="version">Version</string>
    <!-- Preferences - Built-in Equalizer -->
    <string name="eq_pref_title">Built-in equalizer</string>
    <string name="eq_pref_sum">Force built-in equalizer use</string>
    <!-- Preferences - Fine volume control -->
    <string name="precise_volume_pref_title">Precise volume control</string>
    <!-- Preferences - Focus -->
    <string name="focus_pref_title">Audio focus management</string>
    <!-- Preferences - Headsets -->
    <string name="headset_pref_title">Headset plug management</string>
    <!-- Preferences - Playback speed -->
    <string name="playback_pref_title">Selected playback speed</string>
    <string name="playback_pref_summary_off">One song only</string>
    <string name="playback_pref_summary_on">Keep</string>
    <!-- Preferences - choose what to do when a playlist ends -->
    <string name="on_list_ended_pref_title">When a list ends…</string>
    <string name="on_list_ended_pref_stop_title">Stop</string>
    <string name="on_list_ended_pref_continue_title">Continue</string>
    <!-- Preferences - covers -->
    <string name="covers_pref_title">Embedded album covers</string>
    <!-- Preferences - Fast seeking -->
    <string name="fast_seeking_pref_title">Fast seeking</string>
    <string name="fast_seeking_pref_summary">Fast forward/rewind step (seconds)</string>
    <!-- Preferences - Additional notification actions -->
    <string name="notification_actions_pref_title">Additional notification actions</string>
    <string name="notification_actions_repeat">Repeat/close</string>
    <string name="notification_actions_favorite">Add to favorites/close</string>
    <string name="notification_actions_favorite_position">Add to favorites (with position)/close</string>
    <string name="notification_actions_fast_seeking">Fast seeking</string>

    <!-- Preferences - Song visualization options (tl = title, fn = full name) -->
    <string name="song_visual_pref_title">Song visualization</string>
    <string name="song_visual_pref_tl_title">Title</string>
    <string name="song_visual_pref_fn_title">Filename</string>
    <!-- Preferences - Animations/Circular reveal fragments -->
    <string name="anim_pref_title">Animations</string>
    <!-- Preferences - Filters -->
    <string name="filter_pref_title">Filters</string>
    <!-- Preferences - Confirmation dialogs -->
    <string name="confirm_ask_pref_title">Confirmation messages</string>
    <string name="confirm_ask_pref_sum">Ask for confirmation before doing anything</string>
</resources>
